--- a/templates/index.html
+++ b/templates/index.html
@@ -121,16 +121,16 @@
 <body>
     <div class="container">
         <div class="row my-3">
-            {% for category, questions in questions.items() %}
+            {% for category, points_to_questions_map in categorized_questions.items() %}
                 <div class="col-md-2 mx-3">
                     <div class="category-block">
                         <h3>{{ category }}</h3>
                         <div class="d-flex flex-column">
-                            {% for points, question in questions.items() %}
-                                <div class="card question-card mb-2" data-question-id="{{ question["question_id"] }}" onclick="selectQuestion({{ question["question_id"] }})">
+                            {% for points_value, question_data in points_to_questions_map.items() %}
+                                <div class="card question-card mb-2 {{ "answered" if question_data["question_id"] in answered_question_ids }}" data-question-id="{{ question_data["question_id"] }}" onclick="selectQuestion({{ question_data["question_id"] }})">
                                     <div class="card-body">
-                                        <h5 class="card-title">{{ points }} €</h5>
-                                        <p class="card-text">{{ question["type"] }}</p>
+                                        <h5 class="card-title">{{ points_value }} €</h5>
+                                        <p class="card-text">{{ question_data["type"] }}</p>
                                     </div>
                                 </div>
                             {% endfor %}
@@ -212,7 +212,7 @@
 
             // Check if the question card is already answered
             var card = document.querySelector(`[data-question-id="${questionId}"]`);
-            var alreadyAnswered = card.classList.contains('answered'); // TODO: Im Server speichern und Abrufen, wegen Refresh
+            var alreadyAnswered = card.classList.contains('answered');
 
             $.post("/select_question/" + questionId, {}, function(data) {
                 $('#questionModalLabel').text(data.category + " - " + data.points + " (" + data.type + ")")
